@@ -7,8 +7,12 @@
 	INCLUDE_DIRECTORIES(${OPENJPEG_SOURCE_DIR}/libs/FreeImage)
 	
 	# Link libraries
-	LINK_DIRECTORIES(${OPENJPEG_SOURCE_DIR}/libs/FreeImage)
 	
+IF(WIN32)
+	LINK_DIRECTORIES(${OPENJPEG_SOURCE_DIR}/libs/FreeImage)
 	LINK_LIBRARIES(freeimage.s)
-	ADD_DEFINITIONS ( -DFREEIMAGE_LIB )
+ELSE(WIN32)
+  LINK_LIBRARIES(freeimage)
+ENDIF(WIN32)
 
+	ADD_DEFINITIONS ( -DFREEIMAGE_LIB )
